corrects sizing issue of menu on smaller screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,10 +62,6 @@ em {
     line-height: 60px;
 }
 
-#menu {
-    margin-right: 3rem;
-}
-
 #menu li{
     float: right;
     font-size: 20px;
@@ -105,6 +101,7 @@ em {
     display: flex;
     flex-direction: row;
     margin-bottom: 2rem;
+    margin-right: 3rem;
 }
 
 .hero {
@@ -133,6 +130,7 @@ em {
     font-family: ABeeZee, sans-serif;
     padding-inline: 2rem;    
 }
+    
 
 #introduction  a {
     text-decoration: none;
@@ -189,7 +187,6 @@ em {
     clear: both;
   }
 
-  
 .image-size {
     min-height: 230px;
     width: 345px;
@@ -271,7 +268,7 @@ input[type=text], select, textarea{
   .col-25 {
     float: left;
     text-align: end;
-    max-width: 320px;
+    width: 320px;
     margin-top: 6px;
   }
   
@@ -330,7 +327,8 @@ input[type=text], select, textarea{
   .form {
     display: flex;
     flex-direction: column;
-    width: 50vh;
+    padding: 2rem;
+
   }
 
 /*footer*/
@@ -340,10 +338,6 @@ footer {
     padding-top: 1rem;
     padding-bottom: 2rem;
     margin-top: auto;
-}
-
-.push {
-  height: 50px;
 }
 
 #social-created {
@@ -471,8 +465,13 @@ footer {
         clear: both;
         list-style-type: none;
         font-family: ABeeZee, sans-serif;
-        font-weight: 600;
         padding-inline: 1rem;    
+    }
+
+    .image-size {
+        height: auto;
+        padding: 0;
+        display: contents;
     }
 }
 
@@ -501,6 +500,10 @@ footer {
         letter-spacing: 2rem;
         text-indent: 2rem;
     }
+
+    #menu li {
+        padding: 0;
+    } 
 
     span .icon {
         font-size: large;
@@ -553,14 +556,13 @@ footer {
         clear: both;
         list-style-type: none;
         font-family: ABeeZee, sans-serif;
-        font-weight: 600;
         padding-inline: 1rem;    
     }
     
     #container {
         clear: both;
         display: flex;
-        flex-direction: column;   
+        flex-direction: row;   
         margin-bottom: 2rem;
         margin: 2rem;
     }
@@ -588,23 +590,17 @@ footer {
         color: #f5f5f5;
         padding-top: 1rem;
         padding-bottom: 2rem;
+        height: max-content;
         margin-top: auto;
         justify-content: center;
     }
     
-    .push {
-      height: 50px;
-    }
-    
     #disclaimer {
-        font-family: ABeeZee, sans-serif;
+        font-family: ABeeZee, Lora, sans-serif;
         font-size: 15px;
-        float: left;
-        width: 33%;
-        text-align: justify;
-        margin-left: 5%;
-        margin-bottom: auto;
-        padding: 15px;
+        text-align: center;
+        width: 70%;
+        margin-left: 2%;
     }
         
     .social-networks{
@@ -632,7 +628,7 @@ footer {
     }
 }
 
-/* Responsive layout - when the screen is less than 450px wide, make the two columns stack on top of each other instead of next to each other */
+/* Responsive layout - when the screen is less than 450px wide*/
 @media screen and (max-width: 450px) {
 
     #menu {
@@ -651,12 +647,15 @@ footer {
         padding-bottom: 1vh;
     }
      
-
     #menu i {
         font-size: x-large;
         letter-spacing: 1rem;
         text-indent: 1rem;
     }
+
+    #menu li {
+        padding: 0;
+    } 
 
     span .icon {
         font-size: large;
@@ -665,17 +664,13 @@ footer {
     .text {
         display:none;
     }
-
-    /*Body of content*/
     
     .hero  {
         width: 100vw;
-
     }
 
     img {
-        padding: 0px;
-    
+        padding: 0px;  
     }
 
     #introduction {
@@ -699,7 +694,6 @@ footer {
         clear: both;
         list-style-type: none;
         font-family: ABeeZee, sans-serif;
-        font-weight: 600;
         padding-inline: 1rem;    
     }
     
@@ -718,6 +712,7 @@ footer {
     }
     .section-container {
         clear: both;
+        max-width: 100vw;
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
@@ -747,7 +742,6 @@ footer {
       margin-top: 0;
     }
 
-    /*FOOTER*/
     footer {
         display: flex;
         flex-wrap: wrap;
@@ -756,10 +750,6 @@ footer {
         padding-top: 1rem;
         padding-bottom: 2rem;
         justify-content: center;
-    }
-    
-    .push {
-      height: 50px;
     }
     
     .social-networks {
@@ -772,7 +762,7 @@ footer {
     #disclaimer {
         font-family: ABeeZee, Lora, sans-serif;
         font-size: 15px;
-        text-align: justify;
+        text-align: center;
         width: 70%;
         margin-left: 2%;
     }
